y.output
Non-terminaux inutiles dans la grammaire

   Printf


Terminaux inutilisés dans la grammaire

   tRETURN
   tPRINTF
   tCONST
   tS
   tERROR


Règles inutiles dans la grammaire

   48 Printf: tPRINTF tPARO tVAR tPARF tPV


Grammaire

    0 $accept: start $end

    1 start: Fonctions

    2 Fonctions: Fonction Fonctions
    3          | Fonction

    4 Fonction: Type tVAR tPARO Args tPARF Body

    5 Type: tVOID
    6     | tINT
    7     | tSTRING

    8 Args: Type tVAR tVIRG Args
    9     | Type tVAR
   10     | %empty

   11 $@1: %empty

   12 Body: tACCO $@1 Content tACCF

   13 Content: Decla Content
   14        | Afect Content
   15        | If Content
   16        | While Content
   17        | %empty

   18 Afect: tVAR tAFFECT Exp tPV

   19 Decla: Type ListVars tPV

   20 ListVars: Var SuiteListVars
   21         | Var

   22 SuiteListVars: tVIRG Var SuiteListVars
   23              | tVIRG Var

   24 Var: tVAR tAFFECT Exp
   25    | tVAR

   26 Exp: Exp tMUL Exp
   27    | Exp tDIV Exp
   28    | Exp tPLUS Exp
   29    | Exp tLESS Exp
   30    | Value
   31    | tPARO Exp tPARF

   32 Value: tVAR
   33      | tNB

   34 XIF: %empty

   35 If: tIF tPARO Comparaison tPARF XIF Body

   36 $@2: %empty

   37 If: tIF tPARO Comparaison tPARF XIF Body tELSE $@2 Body

   38 $@3: %empty

   39 $@4: %empty

   40 While: tWHILE $@3 tPARO Comparaison tPARF $@4 Body

   41 Comparaison: Exp OpComparaison Exp

   42 OpComparaison: tEQUIV
   43              | tDIFF
   44              | tSUP
   45              | tINF
   46              | tSUPEQ
   47              | tINFEQ


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tIF (258) 35 37
tELSE (259) 37
tWHILE (260) 40
tPLUS (261) 28
tLESS (262) 29
tAFFECT (263) 18 24
tEQUIV (264) 42
tDIFF (265) 43
tSUP (266) 44
tINF (267) 45
tSUPEQ (268) 46
tINFEQ (269) 47
tMUL (270) 26
tDIV (271) 27
tPARO (272) 4 31 35 37 40
tPARF (273) 4 31 35 37 40
tACCO (274) 12
tACCF (275) 12
tPV (276) 18 19
tVIRG (277) 8 22 23
tVOID (278) 5
tRETURN (279)
tPRINTF (280)
tCONST (281)
tINT (282) 6
tSTRING (283) 7
tVAR (284) 4 8 9 18 24 25 32
tNB (285) 33
tS (286)
tERROR (287)
tIFX (288)


Non-terminaux, suivis des règles où ils apparaissent

$accept (34)
    à gauche: 0
start (35)
    à gauche: 1, à droite: 0
Fonctions (36)
    à gauche: 2 3, à droite: 1 2
Fonction (37)
    à gauche: 4, à droite: 2 3
Type (38)
    à gauche: 5 6 7, à droite: 4 8 9 19
Args (39)
    à gauche: 8 9 10, à droite: 4 8
Body (40)
    à gauche: 12, à droite: 4 35 37 40
$@1 (41)
    à gauche: 11, à droite: 12
Content (42)
    à gauche: 13 14 15 16 17, à droite: 12 13 14 15 16
Afect (43)
    à gauche: 18, à droite: 14
Decla (44)
    à gauche: 19, à droite: 13
ListVars (45)
    à gauche: 20 21, à droite: 19
SuiteListVars (46)
    à gauche: 22 23, à droite: 20 22
Var (47)
    à gauche: 24 25, à droite: 20 21 22 23
Exp (48)
    à gauche: 26 27 28 29 30 31, à droite: 18 24 26 27 28 29 31 41
Value (49)
    à gauche: 32 33, à droite: 30
XIF (50)
    à gauche: 34, à droite: 35 37
If (51)
    à gauche: 35 37, à droite: 15
$@2 (52)
    à gauche: 36, à droite: 37
While (53)
    à gauche: 40, à droite: 16
$@3 (54)
    à gauche: 38, à droite: 40
$@4 (55)
    à gauche: 39, à droite: 40
Comparaison (56)
    à gauche: 41, à droite: 35 37 40
OpComparaison (57)
    à gauche: 42 43 44 45 46 47, à droite: 41


État 0

    0 $accept: . start $end

    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3

    start      aller à l'état 4
    Fonctions  aller à l'état 5
    Fonction   aller à l'état 6
    Type       aller à l'état 7


État 1

    5 Type: tVOID .

    $défaut  réduction par utilisation de la règle 5 (Type)


État 2

    6 Type: tINT .

    $défaut  réduction par utilisation de la règle 6 (Type)


État 3

    7 Type: tSTRING .

    $défaut  réduction par utilisation de la règle 7 (Type)


État 4

    0 $accept: start . $end

    $end  décalage et aller à l'état 8


État 5

    1 start: Fonctions .

    $défaut  réduction par utilisation de la règle 1 (start)


État 6

    2 Fonctions: Fonction . Fonctions
    3          | Fonction .

    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 3 (Fonctions)

    Fonctions  aller à l'état 9
    Fonction   aller à l'état 6
    Type       aller à l'état 7


État 7

    4 Fonction: Type . tVAR tPARO Args tPARF Body

    tVAR  décalage et aller à l'état 10


État 8

    0 $accept: start $end .

    $défaut  accepter


État 9

    2 Fonctions: Fonction Fonctions .

    $défaut  réduction par utilisation de la règle 2 (Fonctions)


État 10

    4 Fonction: Type tVAR . tPARO Args tPARF Body

    tPARO  décalage et aller à l'état 11


État 11

    4 Fonction: Type tVAR tPARO . Args tPARF Body

    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 10 (Args)

    Type  aller à l'état 12
    Args  aller à l'état 13


État 12

    8 Args: Type . tVAR tVIRG Args
    9     | Type . tVAR

    tVAR  décalage et aller à l'état 14


État 13

    4 Fonction: Type tVAR tPARO Args . tPARF Body

    tPARF  décalage et aller à l'état 15


État 14

    8 Args: Type tVAR . tVIRG Args
    9     | Type tVAR .

    tVIRG  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 9 (Args)


État 15

    4 Fonction: Type tVAR tPARO Args tPARF . Body

    tACCO  décalage et aller à l'état 17

    Body  aller à l'état 18


État 16

    8 Args: Type tVAR tVIRG . Args

    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 10 (Args)

    Type  aller à l'état 12
    Args  aller à l'état 19


État 17

   12 Body: tACCO . $@1 Content tACCF

    $défaut  réduction par utilisation de la règle 11 ($@1)

    $@1  aller à l'état 20


État 18

    4 Fonction: Type tVAR tPARO Args tPARF Body .

    $défaut  réduction par utilisation de la règle 4 (Fonction)


État 19

    8 Args: Type tVAR tVIRG Args .

    $défaut  réduction par utilisation de la règle 8 (Args)


État 20

   12 Body: tACCO $@1 . Content tACCF

    tIF      décalage et aller à l'état 21
    tWHILE   décalage et aller à l'état 22
    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 17 (Content)

    Type     aller à l'état 24
    Content  aller à l'état 25
    Afect    aller à l'état 26
    Decla    aller à l'état 27
    If       aller à l'état 28
    While    aller à l'état 29


État 21

   35 If: tIF . tPARO Comparaison tPARF XIF Body
   37   | tIF . tPARO Comparaison tPARF XIF Body tELSE $@2 Body

    tPARO  décalage et aller à l'état 30


État 22

   40 While: tWHILE . $@3 tPARO Comparaison tPARF $@4 Body

    $défaut  réduction par utilisation de la règle 38 ($@3)

    $@3  aller à l'état 31


État 23

   18 Afect: tVAR . tAFFECT Exp tPV

    tAFFECT  décalage et aller à l'état 32


État 24

   19 Decla: Type . ListVars tPV

    tVAR  décalage et aller à l'état 33

    ListVars  aller à l'état 34
    Var       aller à l'état 35


État 25

   12 Body: tACCO $@1 Content . tACCF

    tACCF  décalage et aller à l'état 36


État 26

   14 Content: Afect . Content

    tIF      décalage et aller à l'état 21
    tWHILE   décalage et aller à l'état 22
    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 17 (Content)

    Type     aller à l'état 24
    Content  aller à l'état 37
    Afect    aller à l'état 26
    Decla    aller à l'état 27
    If       aller à l'état 28
    While    aller à l'état 29


État 27

   13 Content: Decla . Content

    tIF      décalage et aller à l'état 21
    tWHILE   décalage et aller à l'état 22
    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 17 (Content)

    Type     aller à l'état 24
    Content  aller à l'état 38
    Afect    aller à l'état 26
    Decla    aller à l'état 27
    If       aller à l'état 28
    While    aller à l'état 29


État 28

   15 Content: If . Content

    tIF      décalage et aller à l'état 21
    tWHILE   décalage et aller à l'état 22
    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 17 (Content)

    Type     aller à l'état 24
    Content  aller à l'état 39
    Afect    aller à l'état 26
    Decla    aller à l'état 27
    If       aller à l'état 28
    While    aller à l'état 29


État 29

   16 Content: While . Content

    tIF      décalage et aller à l'état 21
    tWHILE   décalage et aller à l'état 22
    tVOID    décalage et aller à l'état 1
    tINT     décalage et aller à l'état 2
    tSTRING  décalage et aller à l'état 3
    tVAR     décalage et aller à l'état 23

    $défaut  réduction par utilisation de la règle 17 (Content)

    Type     aller à l'état 24
    Content  aller à l'état 40
    Afect    aller à l'état 26
    Decla    aller à l'état 27
    If       aller à l'état 28
    While    aller à l'état 29


État 30

   35 If: tIF tPARO . Comparaison tPARF XIF Body
   37   | tIF tPARO . Comparaison tPARF XIF Body tELSE $@2 Body

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp          aller à l'état 44
    Value        aller à l'état 45
    Comparaison  aller à l'état 46


État 31

   40 While: tWHILE $@3 . tPARO Comparaison tPARF $@4 Body

    tPARO  décalage et aller à l'état 47


État 32

   18 Afect: tVAR tAFFECT . Exp tPV

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 48
    Value  aller à l'état 45


État 33

   24 Var: tVAR . tAFFECT Exp
   25    | tVAR .

    tAFFECT  décalage et aller à l'état 49

    $défaut  réduction par utilisation de la règle 25 (Var)


État 34

   19 Decla: Type ListVars . tPV

    tPV  décalage et aller à l'état 50


État 35

   20 ListVars: Var . SuiteListVars
   21         | Var .

    tVIRG  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 21 (ListVars)

    SuiteListVars  aller à l'état 52


État 36

   12 Body: tACCO $@1 Content tACCF .

    $défaut  réduction par utilisation de la règle 12 (Body)


État 37

   14 Content: Afect Content .

    $défaut  réduction par utilisation de la règle 14 (Content)


État 38

   13 Content: Decla Content .

    $défaut  réduction par utilisation de la règle 13 (Content)


État 39

   15 Content: If Content .

    $défaut  réduction par utilisation de la règle 15 (Content)


État 40

   16 Content: While Content .

    $défaut  réduction par utilisation de la règle 16 (Content)


État 41

   31 Exp: tPARO . Exp tPARF

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 53
    Value  aller à l'état 45


État 42

   32 Value: tVAR .

    $défaut  réduction par utilisation de la règle 32 (Value)


État 43

   33 Value: tNB .

    $défaut  réduction par utilisation de la règle 33 (Value)


État 44

   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp
   41 Comparaison: Exp . OpComparaison Exp

    tPLUS   décalage et aller à l'état 54
    tLESS   décalage et aller à l'état 55
    tEQUIV  décalage et aller à l'état 56
    tDIFF   décalage et aller à l'état 57
    tSUP    décalage et aller à l'état 58
    tINF    décalage et aller à l'état 59
    tSUPEQ  décalage et aller à l'état 60
    tINFEQ  décalage et aller à l'état 61
    tMUL    décalage et aller à l'état 62
    tDIV    décalage et aller à l'état 63

    OpComparaison  aller à l'état 64


État 45

   30 Exp: Value .

    $défaut  réduction par utilisation de la règle 30 (Exp)


État 46

   35 If: tIF tPARO Comparaison . tPARF XIF Body
   37   | tIF tPARO Comparaison . tPARF XIF Body tELSE $@2 Body

    tPARF  décalage et aller à l'état 65


État 47

   40 While: tWHILE $@3 tPARO . Comparaison tPARF $@4 Body

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp          aller à l'état 44
    Value        aller à l'état 45
    Comparaison  aller à l'état 66


État 48

   18 Afect: tVAR tAFFECT Exp . tPV
   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp

    tPLUS  décalage et aller à l'état 54
    tLESS  décalage et aller à l'état 55
    tMUL   décalage et aller à l'état 62
    tDIV   décalage et aller à l'état 63
    tPV    décalage et aller à l'état 67


État 49

   24 Var: tVAR tAFFECT . Exp

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 68
    Value  aller à l'état 45


État 50

   19 Decla: Type ListVars tPV .

    $défaut  réduction par utilisation de la règle 19 (Decla)


État 51

   22 SuiteListVars: tVIRG . Var SuiteListVars
   23              | tVIRG . Var

    tVAR  décalage et aller à l'état 33

    Var  aller à l'état 69


État 52

   20 ListVars: Var SuiteListVars .

    $défaut  réduction par utilisation de la règle 20 (ListVars)


État 53

   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp
   31    | tPARO Exp . tPARF

    tPLUS  décalage et aller à l'état 54
    tLESS  décalage et aller à l'état 55
    tMUL   décalage et aller à l'état 62
    tDIV   décalage et aller à l'état 63
    tPARF  décalage et aller à l'état 70


État 54

   28 Exp: Exp tPLUS . Exp

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 71
    Value  aller à l'état 45


État 55

   29 Exp: Exp tLESS . Exp

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 72
    Value  aller à l'état 45


État 56

   42 OpComparaison: tEQUIV .

    $défaut  réduction par utilisation de la règle 42 (OpComparaison)


État 57

   43 OpComparaison: tDIFF .

    $défaut  réduction par utilisation de la règle 43 (OpComparaison)


État 58

   44 OpComparaison: tSUP .

    $défaut  réduction par utilisation de la règle 44 (OpComparaison)


État 59

   45 OpComparaison: tINF .

    $défaut  réduction par utilisation de la règle 45 (OpComparaison)


État 60

   46 OpComparaison: tSUPEQ .

    $défaut  réduction par utilisation de la règle 46 (OpComparaison)


État 61

   47 OpComparaison: tINFEQ .

    $défaut  réduction par utilisation de la règle 47 (OpComparaison)


État 62

   26 Exp: Exp tMUL . Exp

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 73
    Value  aller à l'état 45


État 63

   27 Exp: Exp tDIV . Exp

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 74
    Value  aller à l'état 45


État 64

   41 Comparaison: Exp OpComparaison . Exp

    tPARO  décalage et aller à l'état 41
    tVAR   décalage et aller à l'état 42
    tNB    décalage et aller à l'état 43

    Exp    aller à l'état 75
    Value  aller à l'état 45


État 65

   35 If: tIF tPARO Comparaison tPARF . XIF Body
   37   | tIF tPARO Comparaison tPARF . XIF Body tELSE $@2 Body

    $défaut  réduction par utilisation de la règle 34 (XIF)

    XIF  aller à l'état 76


État 66

   40 While: tWHILE $@3 tPARO Comparaison . tPARF $@4 Body

    tPARF  décalage et aller à l'état 77


État 67

   18 Afect: tVAR tAFFECT Exp tPV .

    $défaut  réduction par utilisation de la règle 18 (Afect)


État 68

   24 Var: tVAR tAFFECT Exp .
   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp

    tPLUS  décalage et aller à l'état 54
    tLESS  décalage et aller à l'état 55
    tMUL   décalage et aller à l'état 62
    tDIV   décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 24 (Var)


État 69

   22 SuiteListVars: tVIRG Var . SuiteListVars
   23              | tVIRG Var .

    tVIRG  décalage et aller à l'état 51

    $défaut  réduction par utilisation de la règle 23 (SuiteListVars)

    SuiteListVars  aller à l'état 78


État 70

   31 Exp: tPARO Exp tPARF .

    $défaut  réduction par utilisation de la règle 31 (Exp)


État 71

   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   28    | Exp tPLUS Exp .
   29    | Exp . tLESS Exp

    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 28 (Exp)


État 72

   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp
   29    | Exp tLESS Exp .

    tMUL  décalage et aller à l'état 62
    tDIV  décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 29 (Exp)


État 73

   26 Exp: Exp . tMUL Exp
   26    | Exp tMUL Exp .
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp

    $défaut  réduction par utilisation de la règle 26 (Exp)


État 74

   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   27    | Exp tDIV Exp .
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp

    $défaut  réduction par utilisation de la règle 27 (Exp)


État 75

   26 Exp: Exp . tMUL Exp
   27    | Exp . tDIV Exp
   28    | Exp . tPLUS Exp
   29    | Exp . tLESS Exp
   41 Comparaison: Exp OpComparaison Exp .

    tPLUS  décalage et aller à l'état 54
    tLESS  décalage et aller à l'état 55
    tMUL   décalage et aller à l'état 62
    tDIV   décalage et aller à l'état 63

    $défaut  réduction par utilisation de la règle 41 (Comparaison)


État 76

   35 If: tIF tPARO Comparaison tPARF XIF . Body
   37   | tIF tPARO Comparaison tPARF XIF . Body tELSE $@2 Body

    tACCO  décalage et aller à l'état 17

    Body  aller à l'état 79


État 77

   40 While: tWHILE $@3 tPARO Comparaison tPARF . $@4 Body

    $défaut  réduction par utilisation de la règle 39 ($@4)

    $@4  aller à l'état 80


État 78

   22 SuiteListVars: tVIRG Var SuiteListVars .

    $défaut  réduction par utilisation de la règle 22 (SuiteListVars)


État 79

   35 If: tIF tPARO Comparaison tPARF XIF Body .
   37   | tIF tPARO Comparaison tPARF XIF Body . tELSE $@2 Body

    tELSE  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 35 (If)


État 80

   40 While: tWHILE $@3 tPARO Comparaison tPARF $@4 . Body

    tACCO  décalage et aller à l'état 17

    Body  aller à l'état 82


État 81

   37 If: tIF tPARO Comparaison tPARF XIF Body tELSE . $@2 Body

    $défaut  réduction par utilisation de la règle 36 ($@2)

    $@2  aller à l'état 83


État 82

   40 While: tWHILE $@3 tPARO Comparaison tPARF $@4 Body .

    $défaut  réduction par utilisation de la règle 40 (While)


État 83

   37 If: tIF tPARO Comparaison tPARF XIF Body tELSE $@2 . Body

    tACCO  décalage et aller à l'état 17

    Body  aller à l'état 84


État 84

   37 If: tIF tPARO Comparaison tPARF XIF Body tELSE $@2 Body .

    $défaut  réduction par utilisation de la règle 37 (If)
